# Neural-Network-Constructor

./: .gitignore  2024_05_23.json  Pipfile  README.md  classes.drawio  full_project.py  main.py  pipline.py  pyproject.toml  temp.py  test.py  test2.py  train.xlsx  trash
app/: lightning_data.py  lightning_module.py  main.py  pipeline.py  trash.py
config/: .env  dicts.py  font.py  settings.py  setup.py  utils.py
core/: dragndrop.py  input_node_attr.py  link_node.py  node.py  node_editor.py  output_node_attr.py  param_node.py  utils.py
d2l/: torch.py
design/: app.xml  classes.dot  packages.dot
models/: __init__.py  linear_regression.py
nodes/: dataset.py  layer.py  tools.py  train_params_node.py  utility.py
документы/: Презентация.odp  Презентация.pptx
