[tool.poetry]
name = "dlc"
version = "0.1.0"
description = ""
authors = ["luzinsan  <luzinsan.a.430-2@e.tusur.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
dearpygui = "^1.11.1"
torch = "^2.3.0"
torchvision = "^0.18.0"
lightning = "^2.2.4"
clearml = "^1.16.0"
dearpygui-ext = "^0.9.5"
environs = "^11.0.0"
matplotlib-inline = "^0.1.7"
matplotlib = "^3.9.0"
ipython = "^8.24.0"
tensorboardx = "^2.6.2.2"
mistletoe = "^1.3.0"
gdown = "^5.2.0"
scipy = "^1.13.1"

[tool.poetry.group.dev.dependencies]
pytest-pdb = "^0.3.1"

[[tool.mypy.overrides]]
module = "dearpygui.*"
ignore_missing_imports = true



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
